add create and update handlers

--- a/.env
+++ b/.env
@@ -4,5 +4,6 @@ PG_USER="postgres"
 PG_PASSWORD="postgres"
 PG_DB="postgres"
 
-INFO_HOOK=""
+INFO_HOOK="https://reqres.in/api/users"
+DEBUG_LEVEL = "debug"
 APP_PORT="3000"
